# remote-mcp-exec-gateway

./: .gitignore  DEVELOPER.md  LICENSE  README.md  SYS_INSTRUCTION.md  main.py  opencode.jsonc  pyproject.toml
.opencode/context/project-intelligence/: navigation.md  technical-domain.md
audit/: logger.py
config/: loader.py  models.py  policy.yaml  server.yaml
security/: auth.py  sandbox.py  sanitizer.py
session/: manager.py
tests/: test_command.py  test_config.py  test_error_logging.py  test_filesystem.py  test_phase2.py  test_sandbox.py  test_sanitizer.py  test_tls.py
tools/: base.py  command.py  filesystem.py  system.py
